fix: fix title margin on mobile and gap in numbers

--- a/blocks/number/__description/number__description.css
+++ b/blocks/number/__description/number__description.css
@@ -1,3 +1,9 @@
 .number__description{
   margin-top: 5px;
 }
+
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  .number__description{
+    margin-top: 10px;
+  }
+}
